--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,15 +9,15 @@
 
 <% unless @post.user_id == current_user.id %>
   <% if @favorite.present? %>
-    <button type="button" class="btn btn-danger"><%= link_to 'Unfavorite', favorite_path(id: @favorite.id), method: :delete %>
+    <button type="button" class="btn btn-info"><%= link_to 'Unfavorite', favorite_path(id: @favorite.id), method: :delete %>
   <% else %>
-    <button type="button" class="btn btn-primary"><%= link_to 'Favorite', favorites_path(post_id: @post.id), method: :post %>
+    <button type="button" class="btn btn-info"><%= link_to 'Favorite', favorites_path(post_id: @post.id), method: :post %>
   <% end %>
 <% end %>
 
 <% if @post.user_id == current_user.id %>
   <button type="button" class="btn btn-default"><%= link_to 'Edit', edit_post_path(@post) %>
-  <button type="button" class="btn btn-danger"><%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <button type="button" class="btn btn-default"><%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
 
 <button type="button" class="btn btn-default"><%= link_to 'Back', posts_path %>
