--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<div class="row justify-content-center">
+
 <div class="text-center"
 <p id="notice"><%= notice %></p>
 <div class="row">
@@ -24,4 +26,5 @@
 
   </div>
  </div>
+</div>
 </div>
