--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<div class= "content">
 <h1>All Posts</h1>
 
 <%= link_to 'New Post', new_post_path %>
@@ -7,11 +8,11 @@
 <% if logged_in? %>
   <button type="button" class="btn btn-default"><%= link_to 'Show', post %>
 
-  
   <% end %>
   <small><strong><%= post.user.name %></strong></small>
   <% if post.image && post.image.url %>
-    <%= image_tag post.image.url(), class: "image" %>
+    <%= image_tag post.image.url, size: 30*35, class: "image" %>
+
   <% end %>
   <br>
   <large><%= post.posts %></large>
@@ -19,3 +20,5 @@
   <small><%= post.created_at.strftime('%Y/%-m/%-d %-H:%-M') %></small>
   <% end %>
   </article>
+
+</div>
