--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,11 +17,22 @@
 
       <% if logged_in? %>
 
+          <li class="nav-item"><%= link_to "Profile", user_path(current_user.id),
+          class: "list-group-item list-group-item-action" %></li>
+          <li class="nav-item"><%= link_to "New Post", new_post_path,
+          class: "list-group-item list-group-item-action" %></li>
+          <li class="nav-item"><%= link_to "Favorite", favourite_user_path(current_user.id),
+          class: "list-group-item list-group-item-action" %></li>
+          <li class="nav-item"><%= link_to "Log out", session_path(current_user.id), method: :delete,
+          class: "list-group-item list-group-item-action" %></li>
 
-        <li class="nav-item">
-          <%= link_to "Log out", session_path(current_user.id), method: :delete,
-          class: "list-group-item list-group-item-action" %>
-        </li>
+
+          <% else %>
+
+            <li class="nav-item"><%= link_to "Login", new_session_path,
+              class: "list-group-item list-group-item-action" %></li>
+            <li class="nav-item"><%= link_to "Join", new_user_path,
+              class: "list-group-item list-group-item-action" %></li>
 
         <% end %>
 
